# ARIAC_testing

./: .gitignore  README.md  Readme.txt
automated_test/: build_container.sh  combined_logs.txt  run_test.sh  run_trial.sh
automated_test/ariac_test/: CMakeLists.txt  package.xml
automated_test/ariac_test/include/ariac_test/: ariac_test.hpp
automated_test/ariac_test/launch/: test_assembly.launch.py  test_picktrays.launch.py
automated_test/ariac_test/src/: ariac_test.cpp  test_1.cpp  test_3.cpp  test_picktrays.cpp
automated_test/container_scripts/: build_competitor_code.py  run_test.py  run_test.sh  run_trial.py  run_trial.sh
automated_test/logs/ariac_test/test1_1/: test_log1.txt
automated_test/logs/ariac_test/test2_1/: combined_logs.txt  test_log1.txt
automated_test/tests/: test1.launch.py  test2.launch.py  test3.launch.py  test_pickparts.launch.py
automated_test/trials/: assembly_test.yaml  testing.yaml
docker/: Dockerfile
